# real-estate-for-the-young

./: .dockerignore  .gitignore  COMMANDS.md  CONNECTION_TEST.md  Dockerfile.backend  Dockerfile.backend_window  Dockerfile.frontend  PRODUCTION.md  Platform Readme (raw).md  README.md  README_inha.md  check_json.py  comparison_demo.py  debug_pharmacy.py  dev.py  docker-cleanup.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  map.html  package-lock.json  parsed_README.md  pip.conf  project_structure.txt  pyproject.toml  quick_test.py  requirements.txt  rtms_README.md  setup.py  tatus  test_duplicate_removal.py  크롤링_테스트_기획서.md
.claude/: settings.local.json
backend/: Dockerfile  docker-compose.yml  env.example  main.py  requirements.txt
backend/apps/: __init__.py
backend/apps/streamlit/: __init__.py
backend/configs/: sites.yml
backend/db/: db_manager.py  db_setup_pg.py  db_utils_pg.py  load_normalized_data.py  run_migration.py  schema_setup.sql
backend/db/housing/: db_loader.py  housing_schema.sql
backend/db/housing/migrations/: 003_remove_unused_columns.sql
backend/db/infra/: infra_jsonl_db_loader.py  infra_schema.sql  reset_infra_schema.py  rtms_schema.sql
backend/db/migrations/: 001_add_district_rating.sql
backend/db/postgresql/: facilities_schema.sql  housing_schema.sql  infra_schema.sql  normalized_schema.sql  schema.sql  schema_setup.sql  simplified_id_schema.sql
backend/libs/db/: database.py
backend/libs/models/: jsonb_models.py
backend/libs/utils/: building_type_mapper.py  constants.py  dates.py  hash_io.py  helpers.py  paths.py  units_deduplicator.py
backend/services/api/: app.py
backend/services/api/cli/: __init__.py  __main__.py  api_cli.py
backend/services/api/jina/: app.py
backend/services/api/routers/: auth.py  conversation.py  llm.py  streaming.py
backend/services/api/schemas/: auth.py
backend/services/api/utils/: auth.py  dependencies.py  summarizer.py  test_summarizer.py
backend/services/data_collection/: __init__.py
backend/services/data_collection/cli/: __init__.py  __main__.py  api_cli.py  crawl_platforms_raw.py  load_normalized_data.py  normalized_cli.py
backend/services/data_collection/crawlers/: base.py  co.py  intro_crawler.py  lh.py  pagination.py  sh.py  so.py  youth.py
backend/services/data_collection/curated/: address_api.py  building_form.py  db_loader.py  debug_address.py  infra_loader.py  infra_normalizer.py  normalizer.py  price_utils.py  test_park_db_insert.py  test_park_only.py  test_subway_only.py
backend/services/data_collection/for_pgvector/: README_normalization.md  chunk_faq.py  convert_normalized_to_json.py  extract_pdfs.py  nomalizer_pdf2TextJson.py  normalize_faq.py  normalize_youth_faq.py  normalizer_json2json.py  process_공고문.py  process_주거지원정책.py  reformat_qa.py
backend/services/data_collection/housing/: constants.py
backend/services/data_collection/normalized/: __init__.py  address_api.py  building_type_api.py  coordinate_api.py  db_loader.py  normalizer.py  notice_normalizer.py  price_utils.py  unit_normalizer.py
backend/services/llm/: practicing_langchain.ipynb  readme_langchain_inha.md
backend/services/rag/: README.md  __init__.py  ingest_data.py  migrate_to_vector_db.sql  rag_system.py
backend/services/vector_db/: README_chromadb.md  __init__.py  client.py  config.py  data_loader.py
backend/tests/: test_csv_conversion.py  test_id_generation.py  test_id_relationship.py  test_json_generation.py  test_record_as_notice.py  test_record_id_stability.py  test_simplified_ids.py  test_units_extraction.py
backend/tests/test_output/: test_cohouse_real_data.json  test_converted_occupancy.csv  test_extracted_text.txt  test_sohouse_real_data.json  test_youth_json_output.json
backend/utils/: dev.py
crolling_/: 3조_기아FAQ크롤링_참고용.py  DBeaver_사용가이드.md  README.MD  business_info.csv  crawling_logs.csv  database_manager.py  database_schema.sql  facilities.csv  floor_plan_images.csv  housing.csv  occupancy_status.csv  playwright_requirements.txt  seoul_housing.db  seoul_housing_complete.json  seoul_housing_crawler.py  seoul_housing_data.csv  transportation.csv  실행방법.md  프로젝트_완성_보고서.md
data/chroma_db/: chroma.sqlite3
data/raw/: about.csv  amenities.csv  floorplan.csv  listing.csv  location.csv  movein.csv  overview.csv
db/: .env.sample  create_tables.sql  db_setup.py  db_utils.py
docs/: docker-cleanup.sh  download_models.py  real_estate_diary.md  selector_diary.md  selector_diary_rtms_landprice.md  selector_diary_v1.md  selector_diary_v2.md
frontend/: Dockerfile  app.py  index.html  package-lock.json  package.json  requirements_streamlit.txt
frontend/react/: index.html  package-lock.json  package.json  vite.config.ts
frontend/react/cli/: __init__.py  react_cli.py
frontend/react/src/: App.tsx  index.css
frontend/rtms/: streamlit_app.py
frontend/src/components/: ChatInterface.tsx
frontend/src/services/: llmApi.ts
frontend/utils/: summarizer.py
frontend_streamlit/: requirements.txt
frontend_streamlit/components/: main_agent.py  main_chain.py
frontend_streamlit/react/cli/: __main__.py
frontend_streamlit/react/utils/: session_manager.py
frontend_streamlit/src/services/: llmApi.ts
practicing_vectorstore/: chroma.sqlite3
scripts/: build-and-push.sh  crawl_platforms_raw.py  crawl_public_data.py  crawl_public_raw.py  db_create_and_load.py  load_to_mysql.py
src/: config.py  driver.py  listing.py  main.py  storage.py  utils.py
src/detail/: __init__.py  about.py  amenities.py  floorplan.py  location.py  movein.py  overview.py
(+240 files in other folders)
