[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Real_Estate_for_the_Young"
version = "0.1.0"
description = "Real_Estate_for_the_Young"
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]    # discover backend, backend.services, ...

[project.scripts]
data-collection-housing = "backend.services.data_collection.cli.housing.__main__:main"
data-collection-infra = "backend.services.data_collection.cli.infra.__main__:main"
data-collection-rtms = "backend.services.data_collection.cli.rtms.__main__:main"
data-db = "backend.services.db.cli.db_cli:main"
data-load = "backend.services.loading.cli.load_cli:main"
